--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>responsive</title>
 
+	<!-- FONT -->
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk&display=swap" rel="stylesheet">
+
 	<!-- ICONS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -49,35 +52,54 @@
 
 				<div class="row">
 
-					<div class="col-l">
+					<div class="col large">
 
 						<div class="text">
-							<h3>Get a demo application</h3>
+							<h3>Get a demo application </h3>
 
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, officia voluptatem. Sequi, temporibus numquam! Alias cupiditate tenetur id deleniti quibusdam sequi, sint a quasi totam necessitatibus dicta quas aperiam corporis.</p>
 
 							<button>lorem</button>
 						</div>
 
-						<div class="img">
+						<div class="img-flex">
 							<img src="./img/phone.png" alt="phone">
 						</div>
 
 					</div>
 
 					<div class="col">
+						<i class="fa-solid fa-file-code"></i>
+
+						<h3>Clean code</h3>
+
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores dicta quas excepturi corporis labore? </p>
+					</div>
+
+					<div class="col">
+						<i class="fa-solid fa-file-code"></i>
+
+						<h3>Clean code</h3>
+
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores dicta quas excepturi corporis labore? </p>
 
 					</div>
 
 					<div class="col">
+						<i class="fa-solid fa-file-code"></i>
+
+						<h3>Clean code</h3>
+
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores dicta quas excepturi corporis labore? </p>
 
 					</div>
 
 					<div class="col">
+						<i class="fa-solid fa-file-code"></i>
 
-					</div>
+						<h3>Clean code</h3>
 
-					<div class="col">
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores dicta quas excepturi corporis labore? </p>
 
 					</div>
 
