--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<!-- inizio main -->
 	<main>
-
+		<!-- demo -->
 		<section class="demo">
 
 			<div class="container-big">
@@ -108,6 +108,34 @@
 
 			</div>
 
+		</section>
+
+		<!-- planning -->
+		<section class="bg-purple">
+			<div class="container-small">
+
+				<div class="row-planning">
+					<div class="col-planning">
+						<img src="./img/planning1.png" alt="planning">
+
+						<h2>Strategic planning</h2>
+
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium placeat tempore unde inventore, minima quam. Accusamus, doloremque incidunt. Vel unde error porro deserunt. Alias fuga reprehenderit eveniet ducimus itaque quod!</p>
+					</div>
+					<div class="col-planning img">
+						<div class="inside-col-white">
+							<img src="./img/planning2.png" alt="planning">
+
+							<h2>App development</h2>
+							<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, id officia. </p>
+
+							<a href="#"><i class="fa-solid fa-arrow-down"></i></a>
+
+						</div>
+					</div>
+				</div>
+
+			</div>
 		</section>
 
 	</main>
