--- a/index.html
+++ b/index.html
@@ -173,6 +173,64 @@
 			
 			</div>
 		</section>
+
+		<!-- benefits -->
+		<section class="bg-purple">
+			<div class="container-big">
+				<h4>Benefits of working with us</h4>
+
+				<div class="row">
+					<div class="col-ben">
+						<h5>01</h5>
+						<h3>Hight quality</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo voluptatem blanditiis minima accusantium possimus delectus</p>
+
+						<button>lorem</button>
+					</div>
+
+					<div class="col-ben">
+						<h5>01</h5>
+						<h3>Hight quality</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo voluptatem blanditiis minima accusantium possimus delectus</p>
+
+						<button>lorem</button>
+					</div>
+
+					<div class="col-ben">
+						<h5>01</h5>
+						<h3>Hight quality</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo voluptatem blanditiis minima accusantium possimus delectus</p>
+
+						<button>lorem</button>
+					</div>
+
+					<div class="col-ben">
+						<h5>01</h5>
+						<h3>Hight quality</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo voluptatem blanditiis minima accusantium possimus delectus</p>
+
+						<button>lorem</button>
+					</div>
+
+					<div class="col-ben">
+						<h5>01</h5>
+						<h3>Hight quality</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo voluptatem blanditiis minima accusantium possimus delectus</p>
+
+						<button>lorem</button>
+					</div>
+
+					<div class="col-ben">
+						<h5>01</h5>
+						<h3>Hight quality</h3>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo voluptatem blanditiis minima accusantium possimus delectus</p>
+
+						<button>lorem</button>
+					</div>
+					
+				</div>
+			</div>
+		</section>
 		
 	</main>
 	<!-- fine main -->
