--- a/index.html
+++ b/index.html
@@ -231,7 +231,31 @@
 				</div>
 			</div>
 		</section>
-		
+
+		<!-- about us -->
+		<section class="about-us">
+			<div class="container-big">
+				
+				<div class="row-about">
+					<div class="col-about">
+						<h1>About us</h1>
+
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quasi facilis ipsam et enim numquam officiis dolor quia culpa, ipsum architecto accusamus magnam, aliquam sapiente blanditiis ullam eligendi dignissimos nemo!</p>
+
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est praesentium itaque voluptatibus amet iste. Hic inventore mollitia nobis similique sunt nihil aliquam ipsa. Impedit aliquid optio temporibus suscipit autem quia?</p>
+					</div>
+					<div class="col-about">
+						<img src="./img/about.jpg" alt="about">
+						<h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, officia!</h6>
+						<i class="fa-solid fa-quote-left absolute"></i>
+						<button>lorem</button>
+
+
+					</div>
+				</div>
+			</div>
+		</section>
+
 	</main>
 	<!-- fine main -->
 
