--- a/index.html
+++ b/index.html
@@ -256,6 +256,24 @@
 			</div>
 		</section>
 
+		<!-- get started -->
+		<section class="bg-purple">
+			<div class="container-small">
+				<div class="row-started">
+
+					<p>GET STARTED</p>
+					<h4>Simple, Trasparent Princing</h4>
+					<h7>It's Free!</h7>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor enim soluta laudantium, perferendis expedita veniam autem itaque quas placeat veritatis.</p>
+					
+					<button>lorem</button>
+					
+					<p>Lorem ipsum dolor sit amet.</p>
+
+				</div>
+			</div>
+		</section>
+
 	</main>
 	<!-- fine main -->
 
