--- a/index.html
+++ b/index.html
@@ -279,7 +279,11 @@
 
 	<!-- inizio footer -->
 	<footer>
+		<div class="container-small">
+			<p class="p-footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nulla aliquid asperiores, dignissimos molestiae, reprehenderit nisi porro quos natus totam error</p>
 
+			<p class="p-footer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis, corrupti!</p>
+		</div>
 	</footer>
 	<!-- fine footer -->
 </body>
