fix section margin

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<!-- inizio main -->
 	<main>
 		<!-- demo -->
-		<section class="demo">
+		<section class="demo bg-white">
 
 			<div class="container-big">
 
@@ -139,7 +139,7 @@
 		</section>
 
 		<!-- testimonials -->
-		<section class="testimonials">
+		<section class="testimonials bg-white">
 			<div class="container-big">
 
 				<div class="testimonials-text">
@@ -233,7 +233,7 @@
 		</section>
 
 		<!-- about us -->
-		<section class="about-us">
+		<section class="about-us bg-white">
 			<div class="container-big">
 				
 				<div class="row-about">
