--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="./reset.css">
 	<link rel="stylesheet" href="./utils.css">
 	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="./responsive.css">
 </head>
 
 <body>
@@ -36,6 +37,10 @@
 						<li> <a href="#">lorem</a> </li>
 						<li> <button>lorem</button> </li>
 					</ul>
+
+					<div class="menu">
+						<i class="fa-solid fa-bars"></i>
+					</div>
 
 			</div>
 
